Add Services Section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,76 @@
 			</div>
 		</section>
 		<!-- SERVICES -->
+		<div class="container">
+			<section class="row services" id="services">
+				<div class="col-12">
+					<div class="section-heading">
+						<h6>Services</h6>
+						<h3>Learn Skills</h3>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="service-item">
+						<i class="fa-solid fa-book"></i>
+						<h4>Interactive Platform</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde veniam maiores in aliquid
+							quos.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="service-item">
+						<i class="fa-solid fa-code"></i>
+						<h4>Doubt Support</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde veniam maiores in aliquid
+							quos.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="service-item">
+						<i class="fa-solid fa-computer-mouse"></i>
+						<h4>Interactive Coding Challenges</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde veniam maiores in aliquid
+							quos.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="service-item">
+						<i class="fa-solid fa-tablet"></i>
+						<h4>Mobile and Tablet Coding!</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde veniam maiores in aliquid
+							quos.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="service-item">
+						<i class="fa-solid fa-archway"></i>
+						<h4>Support for Coding Enthusiasts</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde veniam maiores in aliquid
+							quos.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="service-item">
+						<i class="fa-solid fa-puzzle-piece"></i>
+						<h4>Customizable Coding Experience</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde veniam maiores in aliquid
+							quos.
+						</p>
+					</div>
+				</div>
+			</section>
+		</div>
 		<!-- BANNER -->
 		<!-- ABOUT US -->
 		<!-- LEARNING PLAN FORM -->
