--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@
 			</section>
 		</div>
 		<!-- BANNER -->
+		<div class="container-fluid">
+			<section class="row row-gap-md-5 banner">
+				<div class="col-lg-5 col-md-12">
+					<h4>Coding <em>Solutions</em> and <strong>Programming</strong> Mastery</h4>
+				</div>
+				<div class="col-lg-7 col-md-12">
+					<div class="buttons">
+						<div class="btn btn1">
+							<a href="#about">Discover More</a>
+						</div>
+						<div class="btn btn2">
+							<a href="#contact">Contact Us</a>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
 		<!-- ABOUT US -->
 		<!-- LEARNING PLAN FORM -->
 		<!-- TESTIMONIALS -->
