Add About Us section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 				</ul>
 			</div>
 		</header>
+
 		<!-- HERO -->
 		<section class="hero">
 			<div class="hero-content">
@@ -108,15 +109,18 @@
 				</p>
 			</div>
 		</section>
+
 		<!-- SERVICES -->
 		<div class="container">
 			<section class="row services" id="services">
+				<!-- Services Heading -->
 				<div class="col-12">
 					<div class="section-heading">
 						<h6>Services</h6>
 						<h3>Learn Skills</h3>
 					</div>
 				</div>
+				<!-- Service List -->
 				<div class="col-md-6">
 					<div class="service-item">
 						<i class="fa-solid fa-book"></i>
@@ -179,9 +183,10 @@
 				</div>
 			</section>
 		</div>
+
 		<!-- BANNER -->
 		<div class="container-fluid">
-			<section class="row row-gap-md-5 banner">
+			<section class="row banner">
 				<div class="col-lg-5 col-md-12">
 					<h4>Coding <em>Solutions</em> and <strong>Programming</strong> Mastery</h4>
 				</div>
@@ -197,11 +202,67 @@
 				</div>
 			</section>
 		</div>
+
 		<!-- ABOUT US -->
+		<div class="container-fluid">
+			<section class="row about" id="about">
+				<div class="col-12">
+					<div class="section-heading">
+						<h6>About us</h6>
+						<h3>Know us better</h3>
+					</div>
+					<div class="details">
+						<!-- Course Title -->
+						<div class="btn btn-warning">
+							<span>Coding Courses </span>
+						</div>
+						<!-- Course List -->
+						<ul class="course-list">
+							<li class="list-heading bg-dark-subtle d-none d-md-flex">
+								<span>Course Title</span>
+								<span>Duration</span>
+								<span>Level</span>
+								<span>Instructor</span>
+							</li>
+							<li>
+								<span class="course-name">Web Development Basics</span>
+								<span>3 months</span>
+								<span>Beginner</span>
+								<span>John Doe</spa>
+							</li>
+							<li class="bg-dark-subtle">
+								<span class="course-name">Advanced Javascript</span>
+								<span>4 months</span>
+								<span>Intermediate</span>
+								<span>Jane Smith</spa>
+							</li>
+							<li>
+								<span class="course-name">Data Structures</span>
+								<span>6 months</span>
+								<span>Advance</span>
+								<span>Chris Williams</spa>
+							</li>
+							<li class="bg-dark-subtle">
+								<span class="course-name">Full Stack Development</span>
+								<span>8 months</span>
+								<span>Expert</span>
+								<span>Emily Johnson</spa>
+							</li>
+
+						</ul>
+					</div>
+				</div>
+			</section>
+		</div>
+
 		<!-- LEARNING PLAN FORM -->
+
 		<!-- TESTIMONIALS -->
+
 		<!-- CONTACT US -->
+
 		<!-- INQUIRY FORM -->
+
 		<!-- FOOTER -->
 	</body>
 </html>
