Correct About Us section

--- a/index.html
+++ b/index.html
@@ -228,27 +228,26 @@
 								<span class="course-name">Web Development Basics</span>
 								<span>3 months</span>
 								<span>Beginner</span>
-								<span>John Doe</spa>
+								<span>John Doe</span>
 							</li>
 							<li class="bg-dark-subtle">
 								<span class="course-name">Advanced Javascript</span>
 								<span>4 months</span>
 								<span>Intermediate</span>
-								<span>Jane Smith</spa>
+								<span>Jane Smith</span>
 							</li>
 							<li>
 								<span class="course-name">Data Structures</span>
 								<span>6 months</span>
 								<span>Advance</span>
-								<span>Chris Williams</spa>
+								<span>Chris Williams</span>
 							</li>
 							<li class="bg-dark-subtle">
 								<span class="course-name">Full Stack Development</span>
 								<span>8 months</span>
 								<span>Expert</span>
-								<span>Emily Johnson</spa>
+								<span>Emily Johnson</span>
 							</li>
-
 						</ul>
 					</div>
 				</div>
