Add Learning Plan Form

--- a/index.html
+++ b/index.html
@@ -255,6 +255,54 @@
 		</div>
 
 		<!-- LEARNING PLAN FORM -->
+		<div class="container-fluid form-section">
+			<section class="learning-plan-form">
+				<div class="lplan-img">
+					<img src="assets/images/pic.png" alt="Student Image" />
+				</div>
+				<div class="plan">
+					<div class="section-heading">
+						<h6>Your coding journey</h6>
+						<h3>Create a learning plan</h3>
+					</div>
+					<div class="plan-form">
+						<form action="#" novalidate>
+							<div class="row">
+								<div class="col-12 col-lg-6 mb-4 mb-lg-0">
+									<label for="name" class="form-label fs-5">Your Name</label>
+									<input type="text" class="form-control form-control-lg" id="name" required />
+								</div>
+								<div class="col-12 col-lg-6">
+									<label for="email" class="form-label fs-5">Your Email</label>
+									<input type="email" class="form-control form-control-lg" id="email" required />
+								</div>
+							</div>
+							<div class="my-4 my-xxl-5">
+								<label for="learning-area" class="form-label fs-5">Learning Area</label>
+								<input
+									type="text"
+									name="learning-area"
+									id="learning-area"
+									class="form-control form-control-lg"
+								/>
+							</div>
+							<div class="mb-5">
+								<label for="goals" class="form-label fs-5"> Your Goals </label>
+								<select name="goals" id="goals" class="form-select form-select-lg">
+									<option value="" selected>Choose an Option</option>
+									<option value="intermediate">Intermediate</option>
+									<option value="advance">Advance</option>
+									<option value="expert">Expert</option>
+								</select>
+							</div>
+							<div class="mb-4 mb-xxl-5 submit-btn-container">
+								<button type="submit" class="btn-submit">Submit Now</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</section>
+		</div>
 
 		<!-- TESTIMONIALS -->
 
