--- a/index.html
+++ b/index.html
@@ -305,6 +305,105 @@
 		</div>
 
 		<!-- TESTIMONIALS -->
+		<div class="container container-fluid-lg">
+			<section class="row testimonials" id="testimonials">
+				<div class="col-12">
+					<div class="section-heading">
+						<h6>Testimonials</h6>
+						<h3>What our students say</h3>
+					</div>
+				</div>
+				<!-- Testimonial List -->
+				<div class="carousel slide" id="testimonial-carousel" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<!-- testimonial card -->
+							<div class="testimonial-card">
+								<div class="testimonial-content">
+									<i class="fa-solid fa-quote-left"></i>
+									<p class="review">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab, porro assumenda
+										dicta doloremque blanditiis cupiditate a harum hic veritatis impedit, repellat
+										architecto ad perspiciatis?
+									</p>
+									<h4 class="reviewer">Noah Williams</h4>
+									<span class="designation">Full Stack Developer</span>
+								</div>
+								<div class="image-container">
+									<img
+										src="assets/images/testimonials-01.jpg"
+										alt="Noah Williams's Image"
+										class="reviewer-image"
+									/>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<!-- testimonial card -->
+							<div class="testimonial-card">
+								<div class="testimonial-content">
+									<i class="fa-solid fa-quote-left"></i>
+									<p class="review">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab, porro assumenda
+										dicta doloremque blanditiis cupiditate a harum hic veritatis impedit, repellat
+										architecto ad perspiciatis?
+									</p>
+									<h4 class="reviewer-name">Issabella Hernandaz</h4>
+									<span class="designation">Web Development Student</span>
+								</div>
+								<div class="image-container">
+									<img
+										src="assets/images/testimonials-02.png"
+										alt="Issabella Hernandaz's Image"
+										class="reviewer-image"
+									/>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<!-- testimonial card -->
+							<div class="testimonial-card">
+								<div class="testimonial-content">
+									<i class="fa-solid fa-quote-left"></i>
+									<p class="review">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab, porro assumenda
+										dicta doloremque blanditiis cupiditate a harum hic veritatis impedit, repellat
+										architecto ad perspiciatis?
+									</p>
+									<h4 class="reviewer-name">Sophia Anderson</h4>
+									<span class="designation">Data Science Enthusiast</span>
+								</div>
+								<div class="image-container">
+									<img
+										src="assets/images/testimonials-03.jpg"
+										alt="Sophia Anderson's Image"
+										class="reviewer-image"
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+					<button
+						class="carousel-control-prev"
+						type="button"
+						data-bs-target="#testimonial-carousel"
+						data-bs-slide="prev"
+					>
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button
+						class="carousel-control-next"
+						type="button"
+						data-bs-target="#testimonial-carousel"
+						data-bs-slide="next"
+					>
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
+				</div>
+			</section>
+		</div>
 
 		<!-- CONTACT US -->
 
